<resources>
    <string name="app_name">AOSP Notifications</string>

    <!-- Settings Activity Title -->
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="notification_persistent_header">Persistent Notification</string>
    <string name="sync_header">Sync</string>

    <!-- Notification Preferences -->
    <string name="ongoing_title">On going</string>
    <string name="importance_title">Importance</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search_hint">Search notifications</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="search_title">xxx</string>
    <string name="title">Notification section</string>
    <string name="secondary_text">Find the notification type you want, enable it and tap on it to set it up.</string>
    <string name="enable_notification">Enable</string>
    <string name="label">Importance</string>
    <string name="notification_persistent_summary">Notification that cannot be dismissed by the user.</string>
    <string name="noclear_title">No clear</string>
    <string name="notification_autodismissible_header">Autodismissible Notification</string>
    <string name="notification_autodismissible_summary">Notification that dismiss itself by user touch.</string>
    <string name="autocancel_title">Auto cancel</string>
    <string name="notification_customized_header">Customized Notification</string>
    <string name="notification_customized_summary">Notification that uses remote view.</string>
    <string name="customized_title">Remote view</string>
    <string name="notification_fullscreen_header">Fullscreen Notification</string>
    <string name="notification_fullscreen_summary">Notification that takes the whole screen.</string>
    <string name="fullscreen_title">Fullscreen</string>
    <string name="notification_other_header">Other Settings</string>
    <string name="other_title">Incremental ID</string>
    <string name="other_summary">Each time you fire a notification, it goes with a different ID.</string>
    <string name="notification_timed_header">Timed Notification</string>
    <string name="notification_timed_summary">Notification with a time to be fired.</string>
    <string name="timed_title">Timed</string>
    <string name="time_title">Time</string>
    <string name="notification_basic_title">General Notification</string>
    <string name="notification_general_title">General Notification</string>
    <string name="notification_general_text">Can be customized as you wish, adding or removing flags and other settings.</string>
</resources>